--- a/init.html
+++ b/init.html
@@ -74,222 +74,170 @@
   </div>
 
 <script type="module">
-/* ---------- 依赖 ---------- */
+/* ===== 导入，与当前 fido2.js / hdwallet-core.js 对齐 ===== */
 import {
   ensureCredentialWithChoice,
   deriveKEK,
   deriveKEKWithSalt,
   aesGcmEncryptStr,
   aesGcmDecryptStr,
+  loadCredHex,          // 新增：用来判断是否已有凭证
 } from './js/fido2.js';
+
 import {
   genMnemonic, mnemonicToSeed, exportBranches,
   createPasswordBackupBlob, validatePasswordStrict
 } from './js/hdwallet-core.js';
 
-/* ---------- 小工具（多候选选择器 + 安全绑定） ---------- */
-const $$ = sel => document.querySelector(sel);
-const pick = (...ids) => ids.map(id => (typeof id === 'string' ? id : null))
-                            .filter(Boolean)
-                            .map(s => document.querySelector(s))
-                            .find(Boolean) || null;
-const on = (el, ev, fn) => el && el.addEventListener(ev, fn, { passive: true });
+/* ===== DOM 快捷 ===== */
+const $ = (id) => document.getElementById(id);
 
-/* 支持多候选 ID 的“取元素”封装（命名尽量覆盖你之前几版） */
-const el = {
-  // Step A
-  btnCred:  () => pick('#btn-register', '#btn-cred', '#btnFidoRegister'),
-  tipCred:  () => pick('#reg-tip', '#tip-cred'),
-  // Step B：生成/显示相关
-  btnGen:   () => pick('#btn-gen', '#btnGen', '#genMnemonic'),
-  tipGen:   () => pick('#gen-tip', '#tip-gen'),
-  mnWrap:   () => pick('#mnemo-container', '#mnemoWrap'),
-  mnGrid:   () => pick('#mnemo-grid', '#mnemoGrid'),
-  // 统一遮罩与按钮（两版命名都兼容）
-  mask:     () => pick('#mnemo-mask', '#grid-mask', '#mnMask'),
-  btnShow:  () => pick('#mnemo-toggle', '#btn-show', '#btnReveal'),
-  tipShow:  () => pick('#reveal-tip', '#revealTip'),
-  // 备份（可选，缺就跳过）
-  chkBackup:() => pick('#want-backup', '#chk-backup'),
-  boxBackup:() => pick('#backup-area', '#backupArea'),
-  pw1:      () => pick('#pw1'),
-  pw2:      () => pick('#pw2'),
-  btnBackup:() => pick('#btn-backup', '#btnBackup'),
-  tipPw:    () => pick('#pw-tip', '#tip-pw'),
-  // Step 4
-  btnEncrypt:() => pick('#btn-encrypt', '#btnEncrypt'),
-  tipEncrypt:() => pick('#encrypt-tip', '#tip-encrypt'),
-  tipFinal: () => pick('#final-tip', '#tip-final'),
-};
-
-/* ---------- 业务状态 ---------- */
+/* ===== 状态 ===== */
 const API_BASE = 'https://wallet.lucas-l-shang.workers.dev';
-let mnemonic = null;        // 明文助记词（只在生成阶段短暂持有）
-let branches = null;        // 各链分支（xprv/xpub 等）
-let sealed = null;          // { ctHex, ivHex, saltHex, credId } —— 助记词密文包
-let maskTimer = null;
-const DISPLAY_MS = 30_000;
+let branches = null;        // 各链分支（xprv/xpub...）
+let sealed = null;          // 助记词密文包 { ctHex, ivHex, saltHex, credId }
+const DISPLAY_MS = 30_000;  // 显示 30 秒
 
-/* ---------- 遮罩控制（统一遮挡/显示 30s） ---------- */
-function setMask(visible) {
-  const m = el.mask();
-  const t = el.tipShow();
-  if (!m) return;
-  m.style.display = visible ? 'flex' : 'none';
-  if (t) t.style.display = visible ? 'none' : 'inline';
-  if (visible) { clearTimeout(maskTimer); maskTimer = null; }
+/* ===== UI 辅助 ===== */
+function enableGenUI(on = true) {
+  const g = $('btn-gen');
+  if (g) g.disabled = !on;
 }
-
-function startCountdown() {
-  const t = el.tipShow();
-  if (!t) return;
-  let left = DISPLAY_MS / 1000;
-  t.textContent = `已显示，${left}s 后自动遮挡`;
-  clearTimeout(maskTimer);
-  maskTimer = setInterval(() => {
-    left -= 1;
-    if (left <= 0) { setMask(true); clearInterval(maskTimer); return; }
-    t.textContent = `已显示，${left}s 后自动遮挡`;
-  }, 1000);
+function enableShowUI(on = true) {
+  const s = $('btn-show');
+  if (s) s.disabled = !on;
 }
-
-/* ---------- 助记词渲染 ---------- */
+function enableEncryptUI(on = true) {
+  const e = $('btn-encrypt');
+  if (e) e.disabled = !on;
+}
 function renderGrid(words) {
-  const grid = el.mnGrid();
-  const wrap = el.mnWrap();
-  if (!grid || !wrap) return;
+  const grid = $('mnemo-grid');
+  const card = $('mnemo-card');
+  if (!grid || !card) return;
   grid.innerHTML = '';
   words.forEach((w, i) => {
     const d = document.createElement('div');
     d.className = 'cell';
-    d.innerHTML = `<span class="badge">${i + 1}</span><span class="word">${w}</span>`;
+    d.innerHTML = `<span class="badge">${i+1}</span><span class="word">${w}</span>`;
     grid.appendChild(d);
   });
-  wrap.style.display = 'block';
-  setMask(true); // 初始蒙住
+  card.style.display = 'block';
 }
 
-/* ---------- 事件绑定：DOMContentLoaded 后统一绑定 ---------- */
+/* ===== 页面就绪后绑定事件 ===== */
 document.addEventListener('DOMContentLoaded', () => {
-  /* Step A：注册/复用 FIDO2 凭证 */
-  on(el.btnCred(), 'click', async () => {
+  /* --- 初始：若本地已有凭证，则启用“生成助记词” --- */
+  try {
+    if (loadCredHex()) {
+      enableGenUI(true);
+      const tip = $('reg-tip');
+      if (tip) tip.innerHTML = '<span class="ok">已可使用凭证（本地已存在）。</span>';
+    }
+  } catch {}
+
+  /* --- 步骤 A：注册/复用 FIDO2 凭证 --- */
+  $('btn-register')?.addEventListener('click', async () => {
+    const tip = $('reg-tip');
     try {
       const res = await ensureCredentialWithChoice();
-      if (el.tipCred()) {
-        el.tipCred().innerHTML = res?.created
+      if (tip) {
+        tip.innerHTML = res?.created
           ? '<span class="ok">已注册新凭证。</span>'
           : `<span class="ok">已可使用凭证（id: ${(res?.id_hex||'').slice(0,16)}…）。</span>`;
       }
+      // 有凭证后启用“生成助记词”
+      enableGenUI(true);
     } catch (e) {
-      if (el.tipCred()) el.tipCred().innerHTML = `<span class="err">注册/复用失败：${e?.message||e}</span>`;
+      if (tip) tip.innerHTML = `<span class="err">注册/复用失败：${e?.message||e}</span>`;
       console.error(e);
     }
   });
 
-  /* Step B-1：可选备份 UI（存在才绑定） */
-  const chk = el.chkBackup();
-  if (chk) {
-    on(chk, 'change', () => {
-      const area = el.boxBackup();
-      if (area) area.style.display = chk.checked ? 'block' : 'none';
-      const btn = el.btnBackup();
-      if (btn) btn.disabled = !chk.checked;
-    });
-  }
-  const pwInput = () => {
-    const p1 = el.pw1(), p2 = el.pw2(), tip = el.tipPw(), btn = el.btnBackup();
-    if (!p1 || !p2 || !btn || !tip) return;
-    const a = p1.value, b = p2.value;
-    if (!a && !b) { tip.textContent = ''; btn.disabled = true; return; }
-    if (a !== b) { tip.innerHTML = '<span class="err">两次密码不一致</span>'; btn.disabled = true; return; }
-    const v = validatePasswordStrict(a);
-    if (!v.ok) { tip.innerHTML = `<span class="err">${v.reason}</span>`; btn.disabled = true; return; }
-    tip.innerHTML = '<span class="ok">密码强度通过</span>'; btn.disabled = false;
-  };
-  on(el.pw1(), 'input', pwInput);
-  on(el.pw2(), 'input', pwInput);
-
-  on(el.btnBackup(), 'click', async () => {
-    try {
-      if (!sealed) { alert('请先生成助记词'); return; }
-      const tip = el.tipPw();
-      const pass = (el.pw1() && el.pw1().value) || '';
-      // 这里的“离线备份”是**助记词密文包**的再次口令保护；若你希望备份明文助记词，请改用展示后解密得到的明文
-      const blob = new Blob([JSON.stringify({ sealed }, null, 2)], { type: 'application/json' });
-      const url = URL.createObjectURL(blob);
-      const a = document.createElement('a'); a.href = url; a.download = 'mnemonic_backup.enc.json'; a.click();
-      setTimeout(() => URL.revokeObjectURL(url), 3000);
-      if (tip) tip.innerHTML = '<span class="ok">已生成并下载离线备份（密文包）。</span>';
-    } catch (e) {
-      const tip = el.tipPw(); if (tip) tip.innerHTML = `<span class="err">备份失败：${e?.message||e}</span>`;
-      console.error(e);
-    }
+  /* --- 步骤 B-1：可选 勾选“离线备份”（这版 UI 只有勾选，不含密码框） --- */
+  $('cb-backup')?.addEventListener('change', () => {
+    // 当前你的 UI 里没有密码输入与备份按钮，这里只记录勾选状态用于生成时逻辑分支
+    // 如果以后加回密码框/按钮，再在这里开关相关 DOM。
   });
 
-  /* Step B-2：生成助记词（FIDO2 就绪后才有意义） */
-  on(el.btnGen(), 'click', async () => {
+  /* --- 步骤 B-2：生成助记词（默认只保存密文；分支在内存保留用于写库） --- */
+  $('btn-gen')?.addEventListener('click', async () => {
+    const tip = $('gen-tip');
     try {
-      // 1) 生成助记词
-      mnemonic = genMnemonic(128);          // 12 词
+      // 1) 生成助记词（明文仅短暂存在）
+      const mnemonic = genMnemonic(128);             // 12 词
       const words = mnemonic.trim().split(/\s+/);
 
-      // 2) 立即用 FIDO2 派生出的 KEK + salt 加密（仅保存密文）
+      // 2) 立即用 FIDO2 派生 KEK + salt 加密助记词，仅保存密文
       const { kek, salt, rp_id, info, credential_id, toHex } = await deriveKEK();
-      const encObj = await aesGcmEncryptStr(kek, mnemonic);
+      const enc = await aesGcmEncryptStr(kek, mnemonic);
       sealed = {
-        ctHex: encObj.ciphertext,
-        ivHex: encObj.nonce,
+        ctHex: enc.ciphertext,
+        ivHex: enc.nonce,
         saltHex: toHex(salt),
         credId: credential_id,
-        rp_id, info,
+        rp_id, info
       };
 
-      // 3) 立刻清理明文助记词（避免长驻）
-      try { mnemonic = ''; } catch {}
-      // 仍保留各链分支（需要它们用于加密写库）
-      const seed = mnemonicToSeed(words.join(' '), ''); // 这里不再依赖 mnemonic 变量
+      // 3) 生成分支（保留在内存，用于第 C 步写库）
+      const seed = mnemonicToSeed(mnemonic, '');
       branches = exportBranches(seed);
+      enableEncryptUI(true);
 
-      // 4) UI：渲染网格（默认遮挡）；如勾选“备份”，则不立即展示
-      renderGrid(words);
-      const sTip = el.tipGen();
-      if (sTip) sTip.textContent = ''; // 按你要求移除原文案
-      // 统一遮罩由 setMask(true) 控制；点击遮罩/按钮再解密显示 30s
+      // 4) 如果“离线备份”勾选，则**不显示明文**；否则允许手动“显示助记词”
+      if ($('cb-backup')?.checked) {
+        if (tip) tip.innerHTML = '<span class="ok">助记词已加密并可用于离线备份（本页不显示明文）。</span>';
+        enableShowUI(false);
+        // 这里如果要“立刻下载密文包”，可在此触发下载 sealed 的 JSON：
+        // const blob = new Blob([JSON.stringify({ sealed }, null, 2)], { type:'application/json' });
+        // ...
+      } else {
+        if (tip) tip.textContent = '';
+        enableShowUI(true);   // 允许点击“显示助记词（需 FIDO2 解密）”
+      }
+
+      // 5) 安全：清理局部变量引用（全局不保留 mnemonic）
+      try { for (let i=0;i<words.length;i++) words[i]=''; } catch {}
     } catch (e) {
-      const sTip = el.tipGen(); if (sTip) sTip.innerHTML = `<span class="err">生成失败：${e?.message||e}</span>`;
+      if (tip) tip.innerHTML = `<span class="err">生成失败：${e?.message||e}</span>`;
       console.error(e);
     }
   });
 
-  /* Step B-3：点击遮罩/按钮 → FIDO2 解密明文 → 显示 30s 后回遮挡 */
-  const doReveal = async () => {
+  /* --- 步骤 B-3：显示助记词（每次点击都需 FIDO2 解密；30 秒后自动隐藏） --- */
+  $('btn-show')?.addEventListener('click', async () => {
     try {
-      if (!sealed) return;
-      // 重新用 salt + 设备 PRF 派生 KEK（需要触摸/人机验证）
+      if (!sealed) { alert('请先生成助记词'); return; }
+
+      // 重新用“同一 salt + 凭证”派生 KEK
       const { kek } = await deriveKEKWithSalt(sealed.saltHex, sealed.credId);
-      // 解密密文包得到明文
-      const plain = await aesGcmDecryptStr(kek, sealed.ivHex, sealed.ctHex);
-      // 将明文写入网格
-      const words = plain.trim().split(/\s+/);
+      const mnemonic = await aesGcmDecryptStr(kek, sealed.ivHex, sealed.ctHex);
+      const words = mnemonic.trim().split(/\s+/);
+
       renderGrid(words);
-      // 显示 30s
-      setMask(false);
-      startCountdown();
-      // 安全清理变量
-      try { for (let i = 0; i < words.length; i++) words[i] = ''; } catch {}
+
+      // 30 秒后清空显示
+      setTimeout(() => {
+        const grid = $('mnemo-grid');
+        if (grid) grid.innerHTML = '';
+        const card = $('mnemo-card');
+        if (card) card.style.display = 'none';
+      }, DISPLAY_MS);
+
+      // 清理明文变量
+      try { for (let i=0;i<words.length;i++) words[i]=''; } catch {}
     } catch (e) {
       console.error(e);
-      alert('解密失败：' + (e?.message || e));
+      alert('解密失败：' + (e?.message||e));
     }
-  };
-  on(el.mask(), 'click', doReveal);
-  on(el.btnShow(), 'click', doReveal);
+  });
 
-  /* Step 4：写库（与前面一致） */
-  on(el.btnEncrypt(), 'click', async () => {
+  /* --- 步骤 C：使用凭证加密分支并写入数据库 --- */
+  $('btn-encrypt')?.addEventListener('click', async () => {
+    const tip = $('encrypt-tip');
     try {
       if (!branches) { alert('请先生成助记词'); return; }
-      if (el.tipEncrypt()) el.tipEncrypt().textContent = '请触摸密钥以继续…';
+      if (tip) tip.textContent = '请触摸密钥以继续…';
 
       const { kek, salt, rp_id, info, credential_id, toHex } = await deriveKEK();
       const enc = async s => s ? await aesGcmEncryptStr(kek, s) : null;
@@ -303,24 +251,22 @@ document.addEventListener('DOMContentLoaded', () => {
         }
       };
 
-      const res = await fetch(`${API_BASE}/bundles`, {
+      const resp = await fetch(`${API_BASE}/bundles`, {
         method: 'POST',
         headers: { 'content-type': 'application/json' },
-        body: JSON.stringify({ user_id: 'web-ui', note: '初始化保存（UI）', bundle })
+        body: JSON.stringify({ user_id:'web-ui', note:'初始化保存（UI）', bundle })
       });
-      const data = await res.json().catch(() => ({}));
-      if (!res.ok || !data?.ok) throw new Error(data?.error || `HTTP ${res.status}`);
+      const data = await resp.json().catch(()=> ({}));
+      if (!resp.ok || !data?.ok) throw new Error(data?.error || `HTTP ${resp.status}`);
 
-      // 清理敏感引用
-      try { mnemonic = ''; } catch {}
+      if (tip) tip.textContent = '';
+      // 仅清理最敏感字段
       branches.ETH.xprv = branches.EOS.xprv = branches.TRON.xprv = null;
       branches.BTC.xprv_z = null;
-
-      if (el.tipEncrypt()) el.tipEncrypt().textContent = '';
-      if (el.tipFinal()) el.tipFinal().innerHTML = `<span class="ok">注册成功！bundle_id=${data.bundle_id}</span>`;
+      alert(`写入成功：bundle_id=${data.bundle_id}`);
     } catch (e) {
-      if (el.tipEncrypt()) el.tipEncrypt().textContent = '';
-      if (el.tipFinal()) el.tipFinal().innerHTML = `<span class="err">写入失败：${e?.message||e}</span>`;
+      if (tip) tip.textContent = '';
+      alert('写入失败：' + (e?.message || e));
       console.error(e);
     }
   });
